--- a/config/cloud-init-k8s.yaml
+++ b/config/cloud-init-k8s.yaml
@@ -31,3 +31,4 @@ runcmd:
   - curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add
   - sudo apt-add-repository "deb http://apt.kubernetes.io/ kubernetes-xenial main"
   - sudo apt-get install kubeadm kubelet kubectl -y
+  - sudo swapoff -a
